MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = afa-imp #Add more here... 

noinst_LTLIBRARIES = libfwd_module_example_src.la

library_includedir=$(includedir)/fwd-modules/example
include_HEADERS=

libfwd_module_example_src_la_SOURCES = \

libfwd_module_example_src_la_LIBADD = \
		afa-imp/libfwd_module_example_afa_imp.la 
		
library_include_HEADERS=
