MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = tools

noinst_LTLIBRARIES = libxdpd_mgmt_xmp.la

libxdpd_mgmt_xmp_la_SOURCES = \
	xmp.h \
	xmp.cc \
	xdpd_mgmt_protocol.h \
	cxmpmsg.h \
	cxmpmsg.cc \
	cxmpie.h \
	cxmpie.cc \
	cxmpie_command.h \
	cxmpie_command.cc \
	cxmpie_dpid.h \
	cxmpie_dpid.cc \
	cxmpie_portname.h \
	cxmpie_portname.cc \
	cxmpies.h \
	cxmpies.cc

libxdpd_mgmt_xmp_la_LIBADD =
